# blaze

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile-hwc  Jenkinsfile-intel  Jenkinsfile-local  README.md  jenkinsut  setup.sh
accrdd/: pom.xml
cmake/: FindFalconLM.cmake  FindGoogle.cmake  FindIntelAltera.cmake
common/: CMakeLists.txt  Makefile  acc_conf.proto  task.proto
examples/: CMakeLists.txt
examples/arrayTest/: CMakeLists.txt
examples/arrayTest/app/: run-local.sh
examples/arrayTest/cpp_app/: Makefile
examples/arrayTest/cpu_task/: CMakeLists.txt  Makefile
examples/bwa-sw/: BWA_SW.cpp  CMakeLists.txt
examples/caffe/: Makefile  vgg.cpp
examples/caffe/acc_task/: Makefile  vgg.cpp
examples/caffe/app/: pom.xml  run-local.sh  run-on-yarn.sh
examples/caffe/app/src/main/scala/fcs_runtime/examples/: CaffeTest.scala  CaffeTest.scala.bak
examples/caffe/client/: app  main.cpp
examples/caffe_cpp_classification/acc_task/: Makefile  classification.cpp  classification.hpp
examples/caffe_cpp_classification/app/: config.sh  highgui_test.java  img_list.txt  lr-acc.sh  pom.xml  run-local.sh  run-on-yarn.sh  run-on-yarn.sh.bak  test_yarn.sh
examples/caffe_cpp_classification/app/src/main/scala/fcs_runtime/examples/: CaffeCPPClassification.scala  CaffeCPPClassification.scala.bak
examples/caffe_cpp_classification/cpp_app/: .nfs00000000005e19b400001321  Makefile  img_list.txt  img_list_test.txt  main.cpp  test_cpp.sh
examples/caffe_cpp_classification/xlnx_task/: Makefile  classification.cpp  classification.hpp  classification_bak.cpp  classification_bak.hpp
examples/kmeans/mllib/: pom.xml
examples/logisticRegression/mllib/: pom.xml
examples/logisticRegression/mnist/src/main/scala/logistic/: logistic.scala
examples/loopback/altr_task/: Makefile  memcpy.cpp
examples/pairhmm/: CMakeLists.txt  Makefile  PairHMMFpgaInterface.cpp  PairHMMFpgaInterface.h  PairHMMHostInterface.cpp  PairHMMHostInterface.h  PairHMMTask.cpp  PairHMMTask.h  PairHMM_3SLR.cpp  PairHMM_aws_vu9p.cpp  PairHMM_hwc_vu9p.cpp  PairHMM_ku115.cpp  PairHMM_vcu1525.cpp  PairhmmTest.cpp  conf
examples/pi/cpu_task/: CMakeLists.txt
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/java/org/apache/hadoop/yarn/api/records/: ApplicationSubmissionContext.java
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/proto/: yarn_protos.proto
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-client/src/main/java/org/apache/hadoop/yarn/client/api/: AMRMClient.java
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-client/src/main/java/org/apache/hadoop/yarn/client/api/impl/: AMRMClientImpl.java
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-client/src/test/java/org/apache/hadoop/yarn/client/api/impl/: TestAMRMClient.java
hadoop-2.5.1-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/src/main/java/org/apache/hadoop/yarn/api/records/impl/pb/: ApplicationSubmissionContextPBImpl.java
hadoop-2.5.1-src/patches/: YARN-2493-20141008.1.patch  YARN-2501-20141009.2.patch
hadoop-2.6.0-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/src/main/java/org/apache/hadoop/yarn/server/resourcemanager/scheduler/: SchedulerNode.java
hadoop-2.6.0-src/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/src/main/java/org/apache/hadoop/yarn/server/resourcemanager/scheduler/capacity/: LeafQueue.java
manager/: CMakeLists.txt
manager/include/blaze/: AccAgent.h  Admin.h  AppCommManager.h  BaseClient.h  Block.h  BlockManager.h  Client.h  CommManager.h  Common.h  ConfigTable.h  GAMCommManager.h  Platform.h  PlatformManager.h  QueueManager.h  ReserveClient.h  Task.h  TaskEnv.h  TaskManager.h  Timer.h
manager/proto/: CMakeLists.txt
manager/src/: AccAgent.cpp  Admin.cpp  AppCommManager.cpp  BaseClient.cpp  Block.cpp  BlockManager.cpp  BlockManager.h  Client.cpp  CommManager.cpp  CommManager.h  Common.cpp  GAMCommManager.cpp  Makefile  Platform.cpp  PlatformManager.cpp  PlatformManager.h  QueueManager.cpp  ReserveClient.cpp  Task.cpp  TaskEnv.cpp  TaskManager.cpp  Timer.cpp
manager/src/executables/: admin.cpp  main.cpp
manager/src/proto/: acc_conf.pb.cc  msgGamNam.pb.cc  task.pb.cc  task.pb.h
manager/test/: CMakeLists.txt
manager/test/python/: .gitignore  blaze_client.py  reserve.py
manager/test/src/: AppClients.cpp  BlockTests.cpp  ClientTests.cpp  ConfigTests.cpp  PlatformTests.cpp  TestCommon.h  main.cpp
manager/test/tasks/: CMakeLists.txt
manager/test/tasks/delay/: CMakeLists.txt
manager/test/tasks/delay_w_est/: delay_w_est.cpp
package/examples/memcpy/altr_task/: Makefile  Memcpy.cpp  conf
package/nam/sbin/: start-nam.sh
spark-1.5.1/: compile.sh  pom.xml
spark-1.5.1/examples/: pom.xml
spark-1.5.1/sql/core/: pom.xml
